# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  go.mod
.junie/: guidelines.md
tools/: latest_version_tag.sh
